--- a/css/styles.css
+++ b/css/styles.css
@@ -54,14 +54,13 @@ h2 {
 	margin: 0px;
 }
 
-#header {
+.header {
 	height: 100px;
 	display: flex;
 	align-items: center;
 }
 
 #logo {
-	/* position: absolute; */
 	top: 40px;
 }
 
@@ -102,18 +101,12 @@ h2 {
 		}
 
 		.news-time {
-			/* position: absolute;
-			top: 0;
-			left: 120px; */
 			padding-left: 15px;
 			background-image: url('../img/icon-time.png');
 			background-repeat: no-repeat;
 		}
 
 		.news-comments-count {
-			/* position: absolute;
-			top: 0;
-			left: 180px; */
 			padding-left: 15px;
 			background-image: url('../img/icon-comments.png');
 			background-repeat: no-repeat;
@@ -644,13 +637,31 @@ h2 {
     /* margin-bottom: 30px; */
 }
 
-/* .small-news .news-time {
-    position: absolute;
-    top: 0;
-    left: 90px;
-} */
-/* .small-news .news-comments-count {
-    position: absolute;
-    top: 0;
-    left: 150px;
+/* @media screen and (max-width: 1000px) {
+	.fixed-container {
+		width: auto;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.black-bar {
+		height: auto;
+	}
+	.black-bar .fixed-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+
+	}
+	.header {
+		height: auto;
+	}
+	.header .fixed-container {
+		display: flex;
+		flex-direction: column;
+		align-items: unset;
+		justify-content: space-around;
+		margin: 10px 20px;
+	}
 } */
